--- a/login/src/index.module.css
+++ b/login/src/index.module.css
@@ -28,6 +28,12 @@
     margin: 10px;
 }
 
+.ChangePic_butn{
+    margin: 10px;
+}
+
 /* className={styles.form_box} */
 /* import styles from './index.module.css'; */
 /* <Para paraCon={"Portfo"}/> */
+/* {'name': '213',} */
+/* verify */
